--- a/Ansible/playbooks/add_cron_job.yaml
+++ b/Ansible/playbooks/add_cron_job.yaml
@@ -1,6 +1,6 @@
----
-  # This playbook is intended to maintain a consistent set of cron jobs across the target group
-  
+# This playbook is intended to maintain a consistent set of cron jobs across the target group
+
+---  
   # Change hosts to target group
   - hosts: unifi
     remote_user: ansible
@@ -9,7 +9,7 @@
     - cron:
         name: "MAILTO"
         env: yes
-        job: "placeholderemailacct@gmail.com"
+        job: "'{{ email }}'"
         state: present
         user: root
         backup: yes
@@ -47,7 +47,7 @@
         minute: "30"
         hour: "2"
         weekday: 0
-        job: "apt-get update > /var/log/update.rmail 2>&1"
+        job: "apt-get update > /var/log/update.rmail.log 2>&1"
         state: present
         user: root
       become: true
@@ -57,7 +57,7 @@
         minute: "35"
         hour: "2"
         weekday: 0
-        job: "apt-get upgrade -y && apt-get dist-upgrade -y > /var/log/upgrade.rmail 2>&1"
+        job: "apt-get upgrade -y && apt-get dist-upgrade -y > /var/log/upgrade.rmail.log 2>&1"
         state: present
         user: root
       become: true
@@ -78,7 +78,7 @@
        # minute: "00"
        # hour: "3"
        # weekday: 0
-       # job: '"find /var/log/ -maxdepth 1 -name \"*.rmail\" -print -exec cat -n {} \; -exec echo \; | mail -s \"$(date +'\%Y_\%m_\%d__\%H_\%M_\%S') Ubiquiti Update\" placeholderemailacct@gmail.com 2>&1"'
+       # job: '"find /var/log/ -maxdepth 1 -name \"*.rmail.log\" -print -exec cat -n {} \; -exec echo \; | mail -s \"$(date +'\%Y_\%m_\%d__\%H_\%M_\%S') $HOSTNAME\" {{ email }} 2>&1"'
        # state: present
        # user: root
 
