--- a/Ansible/playbooks/add_null_client.yaml
+++ b/Ansible/playbooks/add_null_client.yaml
@@ -3,13 +3,60 @@
 
 ---  
   # Change hosts to target group
-  - hosts: localhost
+  - hosts: temp
     remote_user: ansible
     tasks:
-       - name: Update known_hosts for mail server null client
-         known_hosts:
-            name: rmail.wk
-            state: present
-         become: true
 
+    - name: Set postfix package config options
+      debconf: name='postfix' question='postfix/main_mailer_type' value='No configuration' vtype='string'
+      become: true
 
+    - name: Update repositories cache and install "postfix" package
+      apt:
+        name: postfix
+        update_cache: yes
+        state: latest
+      become: true
+       
+    - name: Install "mailutils" package
+      apt:
+        name: mailutils
+        state: latest
+      become: true
+
+    - name: Configure postfix mail null configuration /etc/postfix/main.cf
+      copy:
+        src: /etc/ansible/configurations/postfix/main.cf
+        dest: /etc/postfix/main.cf
+        owner: root
+        group: root
+        mode: 0644
+        force: yes
+      become: true
+      
+    - name: Update /etc/postfix/main.cf hostname
+      replace:
+        dest: /etc/postfix/main.cf
+        regexp: HOSTNAME
+        replace: '{{ ansible_fqdn }}'
+      become: true
+      
+    - name: Update /etc/postfix/main.cf mail recipient
+      replace:
+        dest: /etc/postfix/main.cf
+        regexp: DESTINATION_MAIL_SERVER
+        replace: '{{ destination_mail_server }}'
+      become: true
+
+    - name: Add postfix service to boot startup and restart
+      service:
+        name: postfix
+        enabled: yes
+        state: restarted
+      become: true
+      
+    - name: Send an email to notify of process completion and simple test
+      mail:
+        to: '{{ mail_recipient }}'
+        subject: Ansible-configured
+        body: 'System {{ ansible_hostname }} has been successfully provisioned for mail relay use.'
