Added ansible prompts for password

--- a/Ansible/configurations/add_ansible_user/add_ansible_user.ini
+++ b/Ansible/configurations/add_ansible_user/add_ansible_user.ini
@@ -1,12 +1,5 @@
 [ansible_vars]
-# ansible user information
 # "host" is target hosts section for bootstrap
-host=
+hosts=
 # "target_user" is the user being utilized to gain access, SUDO rights required!
 target_user=
-# "target_ssh_pass" is the password of the user being utilized
-### MOVE to a VAULT! ###
-target_ssh_pass=
-# "ansible_pass" is the *cached* password used when ansible user is created (mkpasswd --method=sha-512)
-### MOVE to a VAULT! ###
-ansible_pass=
